--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,8 +1,8 @@
-$primary-color: #444;
-$secondary-color: #eece1a;
+$primary-color: rgb(156, 156, 156);
+$secondary-color: rgb(92, 12, 184);
 $show-home-image: true;
-$home-image: url(../img/background.jpg);
-$background-opacity: 0.9;
+$home-image: url(../img/background2.jpg);
+$background-opacity: 0.6;
 
 @mixin easeOut {
   transition: all 0.5s ease-out;
