--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,7 +15,7 @@ body {
   line-height: 1.5;
 }
 
-// Headings //
+// Headings
 h1,
 h2,
 h3 {
@@ -28,8 +28,6 @@ h3 {
 
   &.sm-heading {
     margin-bottom: 2rem;
-    padding: 0.2rem 1rem;
-    background: rgba(lighten($primary-color, 2), 0.5);
   }
 }
 
