--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -44,17 +44,10 @@
   .menu-branding {
     height: 25vh;
     transform: translate3d(100%, 0, 0);
-
-    .portrait {
-      background: url("../img/portrait_small.jpg");
-      width: 150px;
-      height: 150px;
-    }
   }
 
   .about-info {
     grid-template-areas:
-      "bioimage"
       "bio"
       "job1"
       "job2"
@@ -72,6 +65,11 @@
 @include mediaSm {
   main#home h1 {
     margin-top: 10vh;
+  }
+
+  main#contact h1.lg-heading {
+    font-size: 4.5rem;
+    text-align: center;
   }
 
   .projects {
