--- a/css/main.css
+++ b/css/main.css
@@ -1,24 +1,26 @@
 .menu-btn {
   position: absolute;
   z-index: 3;
-  right: 35px;
-  top: 35px;
+  right: 30px;
+  top: 30px;
   cursor: pointer;
   transition: all 0.5s ease-out; }
   .menu-btn .btn-line {
     width: 28px;
     height: 3px;
     margin: 0 0 5px 0;
-    background: #fff;
+    background: #000;
     transition: all 0.5s ease-out; }
   .menu-btn.close {
     transform: rotate(180deg); }
     .menu-btn.close .btn-line:nth-child(1) {
-      transform: rotate(45deg) translate(5px, 5px); }
+      transform: rotate(45deg) translate(5px, 5px);
+      background: #5c0cb8; }
     .menu-btn.close .btn-line:nth-child(2) {
       opacity: 0; }
     .menu-btn.close .btn-line:nth-child(3) {
-      transform: rotate(-45deg) translate(7px, -6px); }
+      transform: rotate(-45deg) translate(7px, -6px);
+      background: #5c0cb8; }
 
 .menu {
   position: fixed;
@@ -39,31 +41,25 @@
   .menu-nav {
     margin: 0;
     padding: 0;
-    background: rgba(55, 55, 55, 0.95);
+    background: rgba(107, 107, 107, 0.95);
     list-style: none;
     transform: translate3d(0, -100%, 0);
     transition: all 0.5s ease-out; }
     .menu-nav.show {
       transform: translate3d(0, 0, 0); }
   .menu-branding {
-    background: rgba(68, 68, 68, 0.95);
+    background: rgba(117, 117, 117, 0.95);
     transform: translate3d(0, 100%, 0);
     transition: all 0.5s ease-out; }
     .menu-branding.show {
       transform: translate3d(0, 0, 0); }
-    .menu-branding .portrait {
-      width: 250px;
-      height: 250px;
-      background: url("../img/portrait.jpg");
-      border-radius: 50%;
-      border: solid 3px #eece1a; }
   .menu .nav-item {
     transform: translate3d(600px, 0, 0);
     transition: all 0.5s ease-out; }
     .menu .nav-item.show {
       transform: translate3d(0, 0, 0); }
     .menu .nav-item.current > a {
-      color: #eece1a; }
+      color: #5c0cb8; }
   .menu .nav-link {
     display: inline-block;
     position: relative;
@@ -71,11 +67,11 @@
     text-transform: uppercase;
     padding: 1rem 0;
     font-weight: 300;
-    color: #fff;
+    color: #000;
     text-decoration: none;
     transition: all 0.5s ease-out; }
     .menu .nav-link:hover {
-      color: #eece1a; }
+      color: #5c0cb8; }
 
 .nav-item:nth-child(1) {
   transition-delay: 0.1s; }
@@ -93,14 +89,14 @@
   box-sizing: border-box; }
 
 body {
-  background: #444;
-  color: #fff;
+  background: #757575;
+  color: #000;
   height: 100%;
   margin: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.5; }
   body#bg-img {
-    background: url(../img/background.jpg);
+    background: url(../img/background2.jpg);
     background-attachment: fixed;
     background-size: cover; }
     body#bg-img:after {
@@ -111,7 +107,7 @@ body {
       width: 100%;
       height: 100%;
       z-index: -1;
-      background: rgba(68, 68, 68, 0.9); }
+      background: rgba(117, 117, 117, 0.6); }
 
 h1,
 h2,
@@ -125,9 +121,7 @@ h3 {
   h1.sm-heading,
   h2.sm-heading,
   h3.sm-heading {
-    margin-bottom: 2rem;
-    padding: 0.2rem 1rem;
-    background: rgba(73, 73, 73, 0.5); }
+    margin-bottom: 2rem; }
 
 a {
   color: #fff;
@@ -139,17 +133,19 @@ header {
   width: 100%; }
 
 .text-secondary {
-  color: #eece1a; }
+  color: #5c0cb8; }
 
 main {
-  padding: 4rem;
+  padding: 1rem 4rem;
   min-height: calc(100vh - 60px); }
+  main h2 {
+    font-size: 2rem; }
   main .icons {
     margin-top: 1rem; }
     main .icons a {
       padding: 0.4rem; }
       main .icons a:hover {
-        color: #eece1a;
+        color: #5c0cb8;
         transition: all 0.5s ease-out; }
   main#home {
     overflow: hidden; }
@@ -159,26 +155,32 @@ main {
 .about-info {
   display: grid;
   grid-gap: 30px;
-  grid-template-areas: "bioimage bio bio" "job1 job2 job3";
+  grid-template-areas: "bio bio bio" "job1 job2 job3";
   grid-template-columns: repeat(3, 1fr); }
-  .about-info .bio-image {
-    grid-area: bioimage;
-    margin: auto;
-    border-radius: 50%;
-    border: #eece1a 3px solid; }
   .about-info .bio {
     grid-area: bio;
     font-size: 1.5rem; }
+    .about-info .bio h3 {
+      font-size: 2.5rem; }
   .about-info .job-1 {
     grid-area: job1; }
+    .about-info .job-1 h3 {
+      font-size: 2rem;
+      color: #5c0cb8; }
   .about-info .job-2 {
     grid-area: job2; }
+    .about-info .job-2 h3 {
+      font-size: 2rem;
+      color: #5c0cb8; }
   .about-info .job-3 {
     grid-area: job3; }
+    .about-info .job-3 h3 {
+      font-size: 2rem;
+      color: #5c0cb8; }
   .about-info .job {
-    background: #515151;
+    background: #828282;
     padding: 0.5rem;
-    border-bottom: #eece1a 5px solid; }
+    border-bottom: #5c0cb8 5px solid; }
 
 .projects {
   display: grid;
@@ -189,7 +191,7 @@ main {
     border: 3px #fff solid; }
     .projects img:hover {
       opacity: 0.5;
-      border-color: #eece1a;
+      border-color: #5c0cb8;
       transition: all 0.5s ease-out; }
 
 .boxes {
@@ -199,17 +201,17 @@ main {
   align-items: center;
   margin-top: 1rem; }
   .boxes div {
-    font-size: 2rem;
+    font-size: 1.5rem;
     border: 3px #fff solid;
-    padding: 1.5rem 2.5rem;
+    padding: 1.5rem 1.5rem;
     margin-bottom: 3rem;
     transition: all 0.5s ease-out; }
     .boxes div:hover {
       padding: 0.5rem 1.5rem;
-      background: #eece1a;
-      color: #000; }
+      background: #5c0cb8;
+      color: #fff; }
       .boxes div:hover span {
-        color: #000; }
+        color: #fff; }
 
 .btn, .btn-dark, .btn-light {
   display: block;
@@ -217,22 +219,22 @@ main {
   border: 0;
   margin-bottom: 0.3rem; }
   .btn:hover, .btn-dark:hover, .btn-light:hover {
-    background: #eece1a;
-    color: #000; }
+    background: #5c0cb8;
+    color: #fff; }
 
 .btn-dark {
   background: black;
   color: #fff; }
 
 .btn-light {
-  background: #c4c4c4;
+  background: whitesmoke;
   color: #333; }
 
 #main-footer {
   text-align: center;
   padding: 1rem;
-  background: #2b2b2b;
-  color: #fff;
+  background: #424242;
+  color: #000;
   height: 60px; }
 
 @media screen and (min-width: 1171px) {
@@ -265,12 +267,8 @@ main {
   .menu-branding {
     height: 25vh;
     transform: translate3d(100%, 0, 0); }
-    .menu-branding .portrait {
-      background: url("../img/portrait_small.jpg");
-      width: 150px;
-      height: 150px; }
   .about-info {
-    grid-template-areas: "bioimage" "bio" "job1" "job2" "job3";
+    grid-template-areas: "bio" "job1" "job2" "job3";
     grid-template-columns: 1fr; }
   .projects {
     grid-template-columns: repeat(2, 1fr); } }
@@ -278,5 +276,8 @@ main {
 @media screen and (max-width: 500px) {
   main#home h1 {
     margin-top: 10vh; }
+  main#contact h1.lg-heading {
+    font-size: 4.5rem;
+    text-align: center; }
   .projects {
     grid-template-columns: 1fr; } }
