--- a/css/main.css
+++ b/css/main.css
@@ -274,8 +274,13 @@ main {
     grid-template-columns: repeat(2, 1fr); } }
 
 @media screen and (max-width: 500px) {
-  main#home h1 {
-    margin-top: 10vh; }
+  main {
+    padding: 2rem; }
+    main #homeh1 {
+      margin-top: 10vh; }
+    main .lg-heading {
+      margin-top: 1rem;
+      font-size: 5rem; }
   main#contact h1.lg-heading {
     font-size: 4.5rem;
     text-align: center; }
